Pascal/test/cohadar/pascal/errors/bad_operands_logic2.pas
program test;
var a: integer;
	b: boolean;

begin
	b := not a;
end.